--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   rel="stylesheet"
 />
     <link rel="stylesheet" href="styles.css">
-    <title>VOCAREFLIX 2.0</title>
+    <title>vocareflix2.0</title>
 </head>
 
 <body>
 
-    <header>VOCAREFLIX 2.0</header>
+    <header>vocareflix2.0</header>
 
 <section class="chamada">
     <div class="chamada-texto">
